--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="assets/styles/normalize.css">
+	<link rel="stylesheet" href="assets/styles/fonts.css">
+	<link rel="stylesheet" href="assets/styles/body.css">
 	<meta charset="UTF-8">
 	<title>Document</title>
 </head>
