--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -13,25 +13,25 @@
 			<h1>WHY THIS IS AWESOME</h1>
 			<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 		</div>
-		<div class="wrap-section">
+		<div class="wrap-section clearfix">
 			<div class="inner-section section-design">
 				<div class="icon"></div>
 				<h2 class="inner-title">Thoughtful Design</h2>
-				<p clas="content">Lorem ipsum dolor sit amet, consectetur adipiscing 
+				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing 
 					elit. Aenean euismod bibendum laoreet. Proin gravida 
 				dolor sit amet lacus accumsan et viverra.</p>
 			</div>
 			<div class="inner-section section-crafted">
 				<div class="icon"></div>
 				<h2 class="inner-title">Well Crafted</h2>
-				<p clas="content">Lorem ipsum dolor sit amet, consectetur adipiscing 
+				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing 
 					elit. Aenean euismod bibendum laoreet. Proin gravida 
 				dolor sit amet lacus accumsan et viverra.</p>
 			</div>
 			<div class="inner-section section-customize">
 				<div class="icon"></div>
 				<h2 class="inner-title">Easy to Customize</h2>
-				<p clas="content">Lorem ipsum dolor sit amet, consectetur adipiscing 
+				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing 
 					elit. Aenean euismod bibendum laoreet. Proin gravida 
 				dolor sit amet lacus accumsan et viverra.</p>
 			</div>
