--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset="UTF-8">
 	<link rel="stylesheet" href="assets/styles/normalize.css">
 	<link rel="stylesheet" href="assets/styles/fonts.css">
-	<link rel="stylesheet" href="assets/styles/body.css">
-	<meta charset="UTF-8">
+	<link rel="stylesheet" href="assets/styles/main.css">
 	<title>Document</title>
 </head>
 <body>
