PRICING OPTION осталось доверстать шрифт в меню

--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -36,6 +36,48 @@
 				dolor sit amet lacus accumsan et viverra.</p>
 			</div>
 		</div>
+		<div class="wrap-pricing">
+			<div class="inner-pricing">
+				<h2 class="pricing title">PRICING OPTIONS</h2>
+				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+			<div class="inner-menu">
+				<ul class="menu basic">
+					<li>Basic</li>
+					<li>$0</li>
+					<li>Free for Life</li>
+					<li>1 gb of space</li>
+					<li>10 gb of bandwidth</li>
+					<li>3 websites</li>
+					<li>Basic Customization</li>
+					<li>wordpress integration</li>
+					<li>email support</li>
+				</ul>
+				<ul class="menu professional">
+					<li>Professional</li>
+					<li>$19</li>
+					<li>Monthly Payment</li>
+					<li>OUR MOST	 POPULAR</li>
+					<li>5 gb of space</li>
+					<li>50 gb of bandwidth</li>
+					<li>12 websites</li>
+					<li>Advanced Customization</li>
+					<li>wordpress integration</li>
+					<li>email support</li>
+				</ul>
+				<ul class="menu enterprise">
+					<li>Enterprise</li>
+					<li>$70</li>
+					<li>Monthly Payment</li>
+					<li>Unlimited space</li>
+					<li>unlimited bandwidth</li>
+					<li>100 websites</li>
+					<li>Advanced Customization</li>
+					<li>wordpress integration</li>
+					<li>24/7 customer support</li>
+				</ul>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
