--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -44,7 +44,7 @@
 			<div class="inner-menu">
 				<ul class="menu basic">
 					<li>Basic</li>
-					<li>$0</li>
+					<li><span>$</span>0</li>
 					<li>Free for Life</li>
 					<li>1 gb of space</li>
 					<li>10 gb of bandwidth</li>
@@ -55,7 +55,7 @@
 				</ul>
 				<ul class="menu professional">
 					<li>Professional</li>
-					<li>$19</li>
+					<li><span>$</span>19</li>
 					<li>Monthly Payment</li>
 					<li>OUR MOST	 POPULAR</li>
 					<li>5 gb of space</li>
@@ -67,7 +67,7 @@
 				</ul>
 				<ul class="menu enterprise">
 					<li>Enterprise</li>
-					<li>$70</li>
+					<li><span>$</span>70</li>
 					<li>Monthly Payment</li>
 					<li>Unlimited space</li>
 					<li>unlimited bandwidth</li>
