end home work 10.02

--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -58,7 +58,7 @@
 				<li>Professional</li>
 				<li><span>$</span>19</li>
 				<li>Monthly Payment</li>
-				<li>OUR MOST	 POPULAR</li>
+				<li>OUR MOST POPULAR</li>
 				<li>5 gb of space</li>
 				<li>50 gb of bandwidth</li>
 				<li>12 websites</li>
@@ -86,5 +86,17 @@
 			<a href="#" class="download">Download</a>
 		</div>
 	</div>
+	<footer class="wrap-footer">
+		<div class="wrap-footer-icons">
+			<div class="inner-footer-icons"></div>
+			<div class="inner-footer-icons"></div>
+			<div class="inner-footer-icons"></div>
+			<div class="inner-footer-icons"></div>
+			<div class="inner-footer-icons"></div>
+			<div class="inner-footer-icons"></div>
+			<div class="inner-footer-icons"></div>
+		</div>
+		<p class="cooperate">&copy; 2015 Axure Themes</p>
+	</footer>
 </body>
 </html>
