--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -2,99 +2,137 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="assets/styles/normalize.css">
-	<link rel="stylesheet" href="assets/styles/fonts.css">
-	<link rel="stylesheet" href="assets/styles/main.css">
+	<link rel="stylesheet" href="assets/css/normalize.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400&display=swap" rel="stylesheet">
+	<link href="assets/css/all.css" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/fonts.css">
+	<link rel="stylesheet" href="assets/css/main.css">
 	<title>Document</title>
 </head>
 <body>
 	<div class="wrap">
-		<div class="wrap-awesome">
-			<h1>WHY THIS IS AWESOME</h1>
-			<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		</div>
-		<div class="wrap-section clearfix">
-			<div class="inner-section section-design">
-				<div class="icon"></div>
-				<h2 class="inner-title">Thoughtful Design</h2>
-				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing 
-					elit. Aenean euismod bibendum laoreet. Proin gravida 
-				dolor sit amet lacus accumsan et viverra.</p>
+		<div class="wrap-content wrap-awesome-padding">
+			<div class="wrap-awesome">
+				<h2 class="title-awesome">WHY THIS IS AWESOME</h2>
+				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 			</div>
-			<div class="inner-section section-crafted">
-				<div class="icon"></div>
-				<h2 class="inner-title">Well Crafted</h2>
-				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing 
-					elit. Aenean euismod bibendum laoreet. Proin gravida 
-				dolor sit amet lacus accumsan et viverra.</p>
-			</div>
-			<div class="inner-section section-customize">
-				<div class="icon"></div>
-				<h2 class="inner-title">Easy to Customize</h2>
-				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing 
-					elit. Aenean euismod bibendum laoreet. Proin gravida 
-				dolor sit amet lacus accumsan et viverra.</p>
+			<div class="wrap-section clearfix">
+				<div class="inner-section section-design">
+					<div class="icon"><i class="far fa-lightbulb"></i></div>
+					<h2 class="inner-title">Thoughtful Design</h2>
+					<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing 
+						elit. Aenean euismod bibendum laoreet. Proin gravida 
+					dolor sit amet lacus accumsan et viverra.</p>
+				</div>
+				<div class="inner-section section-crafted">
+					<div class="icon"><i class="far fa-keyboard"></i></div>
+					<h2 class="inner-title">Well Crafted</h2>
+					<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing 
+						elit. Aenean euismod bibendum laoreet. Proin gravida 
+					dolor sit amet lacus accumsan et viverra.</p>
+				</div>
+				<div class="inner-section section-customize">
+					<div class="icon"><i class="fas fa-bolt"></i></div>
+					<h2 class="inner-title">Easy to Customize</h2>
+					<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing 
+						elit. Aenean euismod bibendum laoreet. Proin gravida 
+					dolor sit amet lacus accumsan et viverra.</p>
+				</div>
 			</div>
 		</div>
 	</div>
 	<div class="wrap-pricing">
-		<div class="inner-pricing">
-			<h2 class="pricing title">PRICING OPTIONS</h2>
-			<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		</div>
-		<div class="inner-menu">
-			<ul class="menu basic">
-				<li>Basic</li>
-				<li><span>$</span>0</li>
-				<li>Free for Life</li>
-				<li>1 gb of space</li>
-				<li>10 gb of bandwidth</li>
-				<li>3 websites</li>
-				<li>Basic Customization</li>
-				<li>wordpress integration</li>
-				<li>email support</li>
-			</ul>
-			<ul class="menu professional">
-				<li>Professional</li>
-				<li><span>$</span>19</li>
-				<li>Monthly Payment</li>
-				<li>OUR MOST POPULAR</li>
-				<li>5 gb of space</li>
-				<li>50 gb of bandwidth</li>
-				<li>12 websites</li>
-				<li>Advanced Customization</li>
-				<li>wordpress integration</li>
-				<li>email support</li>
-			</ul>
-			<ul class="menu enterprise">
-				<li>Enterprise</li>
-				<li><span>$</span>70</li>
-				<li>Monthly Payment</li>
-				<li>Unlimited space</li>
-				<li>unlimited bandwidth</li>
-				<li>100 websites</li>
-				<li>Advanced Customization</li>
-				<li>wordpress integration</li>
-				<li>24/7 customer support</li>
-			</ul>
+		<div class="wrap-pricing-padding">
+			<div class="inner-pricing">
+				<h2 class="pricing title">PRICING OPTIONS</h2>
+				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+			<div class="inner-menu">
+				<div class="inner-menu-section paragraph-basic-section">
+					<div class="paragraph-basic paragraph-conteiner">
+						<div class="paragraph-color price basic">Basic</div>
+						<div class="paragraph-color value"><span>$</span>0</div>
+						<div class="paragraph-color comment">Free for Life</div>
+					</div>
+					<div class="menu-section">
+						<ul class="menu menu-paragraph-basic">
+							<li>1 gb of space</li>
+							<li>10 gb of bandwidth</li>
+							<li>3 websites</li>
+							<li>Basic Customization</li>
+							<li>wordpress integration</li>
+							<li>email support</li>
+						</ul>
+					</div>
+				</div>
+				<div class="inner-menu-section paragraph-professional-section">
+					<div class="paragraph-professional paragraph-conteiner">
+						<div class="paragraph-color price professional">Professional</div>
+						<div class="paragraph-color value"><span>$</span>19</div>
+						<div class="paragraph-color comment">Monthly Payment</div>
+						<div class="paragraph-color orange-comment">OUR MOST POPULAR</div>
+					</div>
+					<div class="menu-section">
+						<ul class="menu menu-paragraph-professional">
+							<li>5 gb of space</li>
+							<li>50 gb of bandwidth</li>
+							<li>12 websites</li>
+							<li>Advanced Customization</li>
+							<li>wordpress integration</li>
+							<li>email support</li>
+						</ul>
+					</div>
+				</div>
+				<div class="inner-menu-section paragraph-enterprise-section">
+					<div class="paragraph-enterprise paragraph-conteiner">
+						<div class="paragraph-color price enterprise">Enterprise</div>
+						<div class="paragraph-color value"><span>$</span>70</div>
+						<div class="paragraph-color comment">Monthly Payment</div>
+					</div>
+					<div class="menu-section">
+						<ul class="menu menu-paragraph-enterprise">
+							<li>Unlimited space</li>
+							<li>unlimited bandwidth</li>
+							<li>100 websites</li>
+							<li>Advanced Customization</li>
+							<li>wordpress integration</li>
+							<li>24/7 customer support</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="wrap-stylish">
-		<div class="wrap-stylish-opacity">
+		<div class="wrap-content inner-stylish">
 			<h2 class="stylish tittle">STYLISH AXURE DESIGN</h2>
 			<p class="content">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
-			<a href="#" class="download">Download</a>
+			<button class="download">Download</button>
 		</div>
 	</div>
 	<footer class="wrap-footer">
 		<div class="wrap-footer-icons">
-			<div class="inner-footer-icons"></div>
-			<div class="inner-footer-icons"></div>
-			<div class="inner-footer-icons"></div>
-			<div class="inner-footer-icons"></div>
-			<div class="inner-footer-icons"></div>
-			<div class="inner-footer-icons"></div>
-			<div class="inner-footer-icons"></div>
+			<a href="#" class="inner-footer-icons">
+				<i class="fab fa-facebook-f"></i>
+			</a>
+			<a href="#" class="inner-footer-icons">
+				<i class="fab fa-twitter"></i>
+			</a>
+			<a href="#" class="inner-footer-icons">
+				<i class="fab fa-google-plus-g"></i>
+			</a>
+			<a href="#" class="inner-footer-icons">
+				<i class="fab fa-pinterest"></i>
+			</a>
+			<a href="#" class="inner-footer-icons">
+				<i class="fab fa-instagram"></i>
+			</a>
+			<a href="#" class="inner-footer-icons">
+				<i class="fab fa-stumbleupon"></i>
+			</a>
+			<a href="#" class="inner-footer-icons">
+				<i class="fas fa-wifi"></i>
+			</a>
 		</div>
 		<p class="cooperate">&copy; 2015 Axure Themes</p>
 	</footer>
