--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -13,7 +13,7 @@
 	<div class="wrap">
 		<div class="wrap-content wrap-awesome-padding">
 			<div class="wrap-awesome">
-				<h2 class="title-awesome">WHY THIS IS AWESOME</h2>
+				<h2 class="title-awesome after-title">WHY THIS IS AWESOME</h2>
 				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 			</div>
 			<div class="wrap-section clearfix">
@@ -44,12 +44,12 @@
 	<div class="wrap-pricing">
 		<div class="wrap-pricing-padding">
 			<div class="inner-pricing">
-				<h2 class="pricing title">PRICING OPTIONS</h2>
+				<h2 class="pricing after-title">PRICING OPTIONS</h2>
 				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 			</div>
 			<div class="inner-menu">
 				<div class="inner-menu-section paragraph-basic-section">
-					<div class="paragraph-basic paragraph-conteiner">
+					<div class="paragraph-basic paragraph-container">
 						<div class="paragraph-color price basic">Basic</div>
 						<div class="paragraph-color value"><span>$</span>0</div>
 						<div class="paragraph-color comment">Free for Life</div>
@@ -66,7 +66,7 @@
 					</div>
 				</div>
 				<div class="inner-menu-section paragraph-professional-section">
-					<div class="paragraph-professional paragraph-conteiner">
+					<div class="paragraph-professional paragraph-container">
 						<div class="paragraph-color price professional">Professional</div>
 						<div class="paragraph-color value"><span>$</span>19</div>
 						<div class="paragraph-color comment">Monthly Payment</div>
@@ -84,7 +84,7 @@
 					</div>
 				</div>
 				<div class="inner-menu-section paragraph-enterprise-section">
-					<div class="paragraph-enterprise paragraph-conteiner">
+					<div class="paragraph-enterprise paragraph-container">
 						<div class="paragraph-color price enterprise">Enterprise</div>
 						<div class="paragraph-color value"><span>$</span>70</div>
 						<div class="paragraph-color comment">Monthly Payment</div>
@@ -105,7 +105,7 @@
 	</div>
 	<div class="wrap-stylish">
 		<div class="wrap-content inner-stylish">
-			<h2 class="stylish tittle">STYLISH AXURE DESIGN</h2>
+			<h2 class="stylish after-title">STYLISH AXURE DESIGN</h2>
 			<p class="content">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
 			<button class="download">Download</button>
 		</div>
