--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="wrap">
-		<div class="wrap-content wrap-awesome-padding">
+		<div class="wrap-content">
 			<div class="wrap-awesome">
 				<h2 class="title-awesome after-title">WHY THIS IS AWESOME</h2>
 				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -133,8 +133,9 @@
 			<a href="#" class="inner-footer-icons">
 				<i class="fas fa-wifi"></i>
 			</a>
+			
+			<p class="cooperate">&copy; 2015 Axure Themes</p>
 		</div>
-		<p class="cooperate">&copy; 2015 Axure Themes</p>
 	</footer>
 </body>
 </html>
