--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -3,13 +3,104 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="assets/css/normalize.css">
-	<link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:100,100i,200,200i,300,300i,400&display=swap" rel="stylesheet">
 	<link href="assets/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/fonts.css">
 	<link rel="stylesheet" href="assets/css/main.css">
 	<title>Document</title>
 </head>
 <body>
+	<div class="wrap-head">
+		
+
+		<div class="wrap-navbar">
+			<div class="inner-navbar">
+				<div class="wrap-logo">
+					<img src="assets/images/logo.png" alt="AXIT" class="logo-navbar-img">
+				</div>
+				<nav class="navbar-menu">
+					<ul class="list-navbar">
+						<li class="navbar-items">
+							<a href="#" class="link-menu">Features</a>
+						</li>
+						<li class="navbar-items">
+							<a href="#" class="link-menu">About</a>
+						</li>
+						<li class="navbar-items">
+							<a href="#" class="link-menu">Pricing</a>
+						</li>
+						<li class="navbar-items">
+							<a href="#" class="link-menu">Reviews</a>
+						</li>
+						<li class="navbar-items">
+							<a href="#" class="link-menu">Contact</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+
+
+		<div class="inner-head">
+			<div class="wrap-header-content">
+				<div class="wrap-logo">
+					<img src="assets/images/logo.png" alt="AXIT" class="logo-content">
+				</div>
+				<h1 class="modern-title after-title">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
+				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+					euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+				accumsan et viverra justo commodo.</p>
+				<button class="download header-download">Download</button>
+			</div>
+
+
+			<div class="wrap-social-media">
+				<div class="social-media-content">
+					<h2 class="social-title">Social Media</h2>
+				</div>
+				<div class="social-media-icons">
+					<div class="wrap-media-icons">
+						<a href="#" class="inner-icons">
+							<i class="fab fa-facebook-f"></i>
+						</a>
+						<a href="#" class="inner-icons">
+							<i class="fab fa-twitter"></i>
+						</a>
+						<a href="#" class="inner-icons">
+							<i class="fab fa-google-plus-g"></i>
+						</a>
+						<a href="#" class="inner-icons">
+							<i class="fab fa-pinterest"></i>
+						</a>
+						<a href="#" class="inner-icons">
+							<i class="fab fa-instagram"></i>
+						</a>
+						<a href="#" class="inner-icons">
+							<i class="fab fa-stumbleupon"></i>
+						</a>
+						<a href="#" class="inner-icons">
+							<i class="fas fa-wifi"></i>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 	<div class="wrap">
 		<div class="wrap-content">
 			<div class="wrap-awesome">
@@ -133,7 +224,6 @@
 			<a href="#" class="inner-footer-icons">
 				<i class="fas fa-wifi"></i>
 			</a>
-			
 			<p class="cooperate">&copy; 2015 Axure Themes</p>
 		</div>
 	</footer>
