--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -10,53 +10,52 @@
 	<title>Document</title>
 </head>
 <body>
-	<div class="wrap-head">
-		
-
-		<div class="wrap-navbar">
-			<div class="inner-navbar">
-				<div class="wrap-logo">
-					<img src="assets/images/logo.png" alt="AXIT" class="logo-navbar-img">
+	<div class="section-header">
+		<div class="wrap-head">
+			<div class="wrap-navbar">
+				<div class="inner-navbar">
+					<div class="wrap-logo">
+						<img src="assets/images/logo.png" alt="AXIT" class="logo-navbar-img">
+					</div>
+					<nav class="navbar-menu">
+						<ul class="list-navbar">
+							<li class="navbar-items">
+								<a href="#" class="link-menu">Features</a>
+							</li>
+							<li class="navbar-items">
+								<a href="#" class="link-menu">About</a>
+							</li>
+							<li class="navbar-items">
+								<a href="#" class="link-menu">Pricing</a>
+							</li>
+							<li class="navbar-items">
+								<a href="#" class="link-menu">Reviews</a>
+							</li>
+							<li class="navbar-items">
+								<a href="#" class="link-menu">Contact</a>
+							</li>
+						</ul>
+					</nav>
 				</div>
-				<nav class="navbar-menu">
-					<ul class="list-navbar">
-						<li class="navbar-items">
-							<a href="#" class="link-menu">Features</a>
-						</li>
-						<li class="navbar-items">
-							<a href="#" class="link-menu">About</a>
-						</li>
-						<li class="navbar-items">
-							<a href="#" class="link-menu">Pricing</a>
-						</li>
-						<li class="navbar-items">
-							<a href="#" class="link-menu">Reviews</a>
-						</li>
-						<li class="navbar-items">
-							<a href="#" class="link-menu">Contact</a>
-						</li>
-					</ul>
-				</nav>
+			</div>
+			<div class="inner-head">
+				<div class="wrap-header-content">
+					<div class="wrap-logo">
+						<img src="assets/images/logo.png" alt="AXIT" class="logo-content">
+					</div>
+					<h1 class="modern-title">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
+					<p class="content content-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+						euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+					accumsan et viverra justo commodo.</p>
+					<button class="download header-download">Download</button>
+				</div>
 			</div>
 		</div>
-
-
-		<div class="inner-head">
-			<div class="wrap-header-content">
-				<div class="wrap-logo">
-					<img src="assets/images/logo.png" alt="AXIT" class="logo-content">
-				</div>
-				<h1 class="modern-title after-title">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
-				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-					euismod bibendum laoreet. Proin gravida dolor sit amet lacus
-				accumsan et viverra justo commodo.</p>
-				<button class="download header-download">Download</button>
-			</div>
-
-
-			<div class="wrap-social-media">
+		<div class="wrap-social-media">
+			<div class="inner-social-media inner-head">
 				<div class="social-media-content">
 					<h2 class="social-title">Social Media</h2>
+					<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
 				</div>
 				<div class="social-media-icons">
 					<div class="wrap-media-icons">
@@ -86,21 +85,6 @@
 			</div>
 		</div>
 	</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	<div class="wrap">
 		<div class="wrap-content">
 			<div class="wrap-awesome">
