Макет все блоки

--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -178,6 +178,65 @@
 			</div>
 		</div>
 	</div>
+	<div class="section-customers">
+		<div class="wrap-customers">
+			<div class="inner-customers">
+				<h2 class="inner-title-customers after-title">WHAT OUR CUSTOMERS ARE SAYING</h2>
+				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+
+			<div class="wrap-reviews">
+				<div class="inner-reviews">
+					<div class="reviews">
+						<p class="content">Lorem ipsum dolor sit amet, 
+							consectetur adipisicing elit. Doloribus 
+							accusamus expedita repellat similique 
+							odio aspernatur ex, architecto eaque 
+						quo suscipit.</p>
+					</div>
+					<div class="castomers">
+						<img src="assets/images/customers.png" alt="Jeremy" class="img-customers">
+						<div class="name-specialty">
+							<p class="name">Jeremy H.</p>
+							<p class="specialty">Manager</p>
+						</div>
+					</div>
+				</div>
+				<div class="inner-reviews">
+					<div class="reviews">
+						<p class="content">Lorem ipsum dolor sit amet, 
+							consectetur adipisicing elit. Doloribus 
+							accusamus expedita repellat similique 
+							odio aspernatur ex, architecto eaque 
+						quo suscipit.</p>
+					</div>
+					<div class="castomers">
+						<img src="assets/images/customers.png" alt="Jeremy" class="img-customers">
+						<div class="name-specialty">
+							<p class="name">John S.</p>
+							<p class="specialty">Freelancer</p>
+						</div>
+					</div>
+				</div>
+				<div class="inner-reviews">
+					<div class="reviews">
+						<p class="content">Lorem ipsum dolor sit amet, 
+							consectetur adipisicing elit. Doloribus 
+							accusamus expedita repellat similique 
+							odio aspernatur ex, architecto eaque 
+						quo suscipit.</p>
+					</div>
+					<div class="castomers">
+						<img src="assets/images/customers.png" alt="Jeremy" class="img-customers">
+						<div class="name-specialty">
+							<p class="name">Susan W.</p>
+							<p class="specialty">Photographer</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="wrap-stylish">
 		<div class="wrap-content inner-stylish">
 			<h2 class="stylish after-title">STYLISH AXURE DESIGN</h2>
