ДЗ - добавил html and CSS TAGS
Добавил блок TAGS
HTML+CSS

--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -85,6 +85,57 @@
 			</div>
 		</div>
 	</div>
+
+
+
+
+
+	<div class="section-tabs">
+		<div class="wrap-tabs">
+			<div class="inner-tabs">
+				<div class="tabs tabs-oragne">
+					<p class="tabs-content">TAB 1</p>
+				</div>
+				<div class="tabs tabs-black">
+					<p class="tabs-content">TAB 2</p>
+				</div>
+				<div class="tabs tabs-black">
+					<p class="tabs-content">TAB 3</p>
+				</div>
+			</div>
+			<div class="wrap-tabs-effect">
+				<div class="inner-effect">
+					<h2 class="inner-title effect-title">Tabs with soft transitioning effect.</h2>
+					<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+						bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
+						justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
+					penatibus et magnis dis parturient montes.</p>
+					<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+					bibendum laoreet.</p>
+					<button class="download-effect">Download</button>
+				</div>
+
+				<div class="inner-img-effect">
+					<img src="assets/images/effect.png" alt="" class="img-effect">
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 	<div class="wrap">
 		<div class="wrap-content">
 			<div class="wrap-awesome">
