Переделал на FLOAT

--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -12,10 +12,10 @@
 <body>
 	<div class="section-header">
 		<div class="wrap-head">
-			<div class="wrap-navbar">
-				<div class="inner-navbar">
+			<div class="wrap-navbar clearfix">
+				<div class="inner-navbar content-width">
 					<div class="wrap-logo">
-						<img src="assets/images/logo.png" alt="AXIT" class="logo-navbar-img">
+						<a href="#"><img src="assets/images/logo.png" alt="AXIT" class="logo-navbar-img"></a>
 					</div>
 					<nav class="navbar-menu">
 						<ul class="list-navbar">
@@ -38,7 +38,7 @@
 					</nav>
 				</div>
 			</div>
-			<div class="inner-head">
+			<div class="inner-head content-width">
 				<div class="wrap-header-content">
 					<div class="wrap-logo">
 						<img src="assets/images/logo.png" alt="AXIT" class="logo-content">
@@ -52,7 +52,7 @@
 			</div>
 		</div>
 		<div class="wrap-social-media">
-			<div class="inner-social-media inner-head">
+			<div class="inner-social-media content-width clearfix">
 				<div class="social-media-content">
 					<h2 class="social-title">Social Media</h2>
 					<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
@@ -86,17 +86,11 @@
 		</div>
 	</div>
 	<div class="section-tabs">
-		<div class="wrap-tabs">
+		<div class="wrap-tabs content-width clearfix">
 			<div class="inner-tabs">
-				<div class="tabs tabs-oragne">
-					<p class="tabs-content">TAB 1</p>
-				</div>
-				<div class="tabs tabs-black">
-					<p class="tabs-content">TAB 2</p>
-				</div>
-				<div class="tabs tabs-black">
-					<p class="tabs-content">TAB 3</p>
-				</div>
+				<div class="tabs tabs-oragne tabs-content">TAB 1</div>
+				<div class="tabs tabs-content tabs-black">TAB 2</div>
+				<div class="tabs tabs-content tabs-black">TAB 3</div>
 			</div>
 			<div class="wrap-tabs-effect">
 				<div class="inner-effect">
@@ -109,7 +103,6 @@
 					bibendum laoreet.</p>
 					<button class="download-effect">Download</button>
 				</div>
-
 				<div class="inner-img-effect">
 					<img src="assets/images/effect.png" alt="" class="img-effect">
 				</div>
@@ -117,7 +110,7 @@
 		</div>
 	</div>
 	<div class="wrap">
-		<div class="wrap-content">
+		<div class="wrap-content content-width">
 			<div class="wrap-awesome">
 				<h2 class="title-awesome after-title">WHY THIS IS AWESOME</h2>
 				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -148,7 +141,7 @@
 		</div>
 	</div>
 	<div class="wrap-pricing">
-		<div class="wrap-pricing-padding">
+		<div class="wrap-pricing-padding content-width">
 			<div class="inner-pricing">
 				<h2 class="pricing after-title">PRICING OPTIONS</h2>
 				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -210,7 +203,7 @@
 		</div>
 	</div>
 	<div class="section-customers">
-		<div class="wrap-customers">
+		<div class="wrap-customers content-width clearfix">
 			<div class="inner-customers">
 				<h2 class="inner-title-customers after-title">WHAT OUR CUSTOMERS ARE SAYING</h2>
 				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -225,7 +218,7 @@
 							odio aspernatur ex, architecto eaque 
 						quo suscipit.</p>
 					</div>
-					<div class="castomers">
+					<div class="customers">
 						<img src="assets/images/customers.png" alt="Jeremy" class="img-customers">
 						<div class="name-specialty">
 							<p class="name">Jeremy H.</p>
@@ -233,7 +226,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="inner-reviews">
+				<div class="inner-reviews inner-reviews-center">
 					<div class="reviews">
 						<p class="content">Lorem ipsum dolor sit amet, 
 							consectetur adipisicing elit. Doloribus 
@@ -269,14 +262,16 @@
 		</div>
 	</div>
 	<div class="wrap-stylish">
-		<div class="wrap-content inner-stylish">
-			<h2 class="stylish after-title">STYLISH AXURE DESIGN</h2>
-			<p class="content">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
-			<button class="download">Download</button>
+		<div class="content-width">
+			<div class="wrap-content inner-stylish">
+				<h2 class="stylish after-title">STYLISH AXURE DESIGN</h2>
+				<p class="content">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
+				<button class="download">Download</button>
+			</div>
 		</div>
 	</div>
 	<footer class="wrap-footer">
-		<div class="wrap-footer-icons">
+		<div class="wrap-footer-icons content-width">
 			<a href="#" class="inner-footer-icons">
 				<i class="fab fa-facebook-f"></i>
 			</a>
