--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -234,7 +234,7 @@
 							odio aspernatur ex, architecto eaque 
 						quo suscipit.</p>
 					</div>
-					<div class="castomers">
+					<div class="customers">
 						<img src="assets/images/customers.png" alt="Jeremy" class="img-customers">
 						<div class="name-specialty">
 							<p class="name">John S.</p>
@@ -250,7 +250,7 @@
 							odio aspernatur ex, architecto eaque 
 						quo suscipit.</p>
 					</div>
-					<div class="castomers">
+					<div class="customers">
 						<img src="assets/images/customers.png" alt="Jeremy" class="img-customers">
 						<div class="name-specialty">
 							<p class="name">Susan W.</p>
