Поправка недочетов с отступами

--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -263,7 +263,7 @@
 	</div>
 	<div class="wrap-stylish">
 		<div class="content-width">
-			<div class="wrap-content inner-stylish">
+			<div class="inner-stylish">
 				<h2 class="stylish after-title">STYLISH AXURE DESIGN</h2>
 				<p class="content">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
 				<button class="download">Download</button>
