--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -12,8 +12,8 @@
 <body>
 	<div class="section-header">
 		<div class="wrap-head">
-			<div class="wrap-navbar clearfix">
-				<div class="inner-navbar content-width">
+			<div class="wrap-navbar">
+				<div class="inner-navbar content-width clearfix">
 					<div class="wrap-logo">
 						<a href="#"><img src="assets/images/logo.png" alt="AXIT" class="logo-navbar-img"></a>
 					</div>
