Пиксель перфект хедер

--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -40,7 +40,7 @@
 			</div>
 			<div class="inner-head content-width">
 				<div class="wrap-header-content">
-					<div class="wrap-logo">
+					<div class="wrap-logo-header">
 						<img src="assets/images/logo.png" alt="AXIT" class="logo-content">
 					</div>
 					<h1 class="modern-title">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
