--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -38,7 +38,7 @@
 					</nav>
 				</div>
 			</div>
-			<div class="inner-head content-width">
+			<div class="inner-head content-width clearfix">
 				<div class="wrap-header-content">
 					<div class="wrap-logo-header">
 						<img src="assets/images/logo.png" alt="AXIT" class="logo-content">
@@ -49,6 +49,21 @@
 					accumsan et viverra justo commodo.</p>
 					<button class="download header-download">Download</button>
 				</div>
+				<form action="#" class="form-head">
+					<h3 class="form-title">Try Your <span class="color-text">FREE</span> Trial Today</h3>
+					<div class="form-input">
+						<div class="input">
+							<input type="text" name="user-name" id="username" placeholder="Name">
+						</div>
+						<div class="input">
+							<input type="email" name="user-name" id="username" placeholder="Email">
+						</div>
+						<div class="input">
+							<input type="password" name="user-name" id="username" placeholder="Password">
+						</div>
+					</div>
+					<button class="form-button">Get Started</button>
+				</form>
 			</div>
 		</div>
 		<div class="wrap-social-media">
@@ -143,7 +158,7 @@
 	<div class="wrap-pricing">
 		<div class="wrap-pricing-padding content-width">
 			<div class="inner-pricing">
-				<h2 class="pricing after-title">PRICING OPTIONS</h2>
+				<h2 class="pricing title-h2 after-title">PRICING OPTIONS</h2>
 				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 			</div>
 			<div class="inner-menu">
@@ -268,6 +283,34 @@
 				<p class="content">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
 				<button class="download">Download</button>
 			</div>
+		</div>
+	</div>
+	<div class="section-contacts">
+		<div class="content-width">
+			<div class="contact-us">
+				<h2 class="title-contact title-h2 after-title">CONTACT US</h2>
+				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+			<form action="#" class="wrap-form-contacts">
+				<div class="inner-form-input clearfix">
+					<div class="form-input form-contact-us">
+						<div class="input">
+							<input type="text" name="user-name" id="username" placeholder="Name">
+						</div>
+						<div class="input">
+							<input type="email" name="user-name" id="usermail" placeholder="Email">
+						</div>
+						<div class="input">
+							<input type="name" name="user-name" id="usersubject" placeholder="Subject">
+						</div>
+					</div>
+					<div class="form-messenger">
+						<!-- <p class="content">Messenger</p> -->
+						<textarea name="messenger" id="" cols="30" rows="10" placeholder="Messenger"></textarea>
+					</div>
+				</div>
+				<button class="contact-button">Send Messange</button>
+			</form>
 		</div>
 	</div>
 	<footer class="wrap-footer">
