workspace все по макету - на проверку

--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -56,10 +56,10 @@
 							<input type="text" name="user-name" id="username" placeholder="Name">
 						</div>
 						<div class="input">
-							<input type="email" name="user-name" id="username" placeholder="Email">
+							<input type="email" name="user-mail" id="usermail" placeholder="Email">
 						</div>
 						<div class="input">
-							<input type="password" name="user-name" id="username" placeholder="Password">
+							<input type="password" name="user-password" id="userpassword" placeholder="Password">
 						</div>
 					</div>
 					<button class="form-button">Get Started</button>
@@ -103,9 +103,9 @@
 	<div class="section-tabs">
 		<div class="wrap-tabs content-width clearfix">
 			<div class="inner-tabs">
-				<div class="tabs tabs-oragne tabs-content">TAB 1</div>
-				<div class="tabs tabs-content tabs-black">TAB 2</div>
-				<div class="tabs tabs-content tabs-black">TAB 3</div>
+				<div class="tabs tabs-content">TAB 1</div>
+				<div class="tabs tabs-content">TAB 2</div>
+				<div class="tabs tabs-content">TAB 3</div>
 			</div>
 			<div class="wrap-tabs-effect">
 				<div class="inner-effect">
@@ -277,12 +277,10 @@
 		</div>
 	</div>
 	<div class="wrap-stylish">
-		<div class="content-width">
-			<div class="inner-stylish">
-				<h2 class="stylish after-title">STYLISH AXURE DESIGN</h2>
-				<p class="content">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
-				<button class="download">Download</button>
-			</div>
+		<div class="content-width inner-stylish">
+			<h2 class="stylish after-title">STYLISH AXURE DESIGN</h2>
+			<p class="content">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
+			<button class="download">Download</button>
 		</div>
 	</div>
 	<div class="section-contacts">
@@ -295,18 +293,17 @@
 				<div class="inner-form-input clearfix">
 					<div class="form-input form-contact-us">
 						<div class="input">
-							<input type="text" name="user-name" id="username" placeholder="Name">
+							<input type="text" name="user-name-contacts" id="username-contacts" placeholder="Name">
 						</div>
 						<div class="input">
-							<input type="email" name="user-name" id="usermail" placeholder="Email">
+							<input type="email" name="user-mail-contacts" id="usermail-contacts" placeholder="Email">
 						</div>
 						<div class="input">
-							<input type="name" name="user-name" id="usersubject" placeholder="Subject">
+							<input type="name" name="user-subject" id="usersubject" placeholder="Subject">
 						</div>
 					</div>
 					<div class="form-messenger">
-						<!-- <p class="content">Messenger</p> -->
-						<textarea name="messenger" id="" cols="30" rows="10" placeholder="Messenger"></textarea>
+						<textarea name="messenger" placeholder="Messenger"></textarea>
 					</div>
 				</div>
 				<button class="contact-button">Send Messange</button>
