--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -10,9 +10,9 @@
 	<title>Document</title>
 </head>
 <body>
-	<div class="section-header">
-		<div class="wrap-head">
-			<div class="wrap-navbar">
+	<section class="section-header">
+		<section class="wrap-head">
+			<header class="wrap-navbar">
 				<div class="inner-navbar content-width clearfix">
 					<div class="wrap-logo">
 						<a href="#"><img src="assets/images/logo.png" alt="AXIT" class="logo-navbar-img"></a>
@@ -37,9 +37,9 @@
 						</ul>
 					</nav>
 				</div>
-			</div>
+			</header>
 			<div class="inner-head content-width clearfix">
-				<div class="wrap-header-content">
+				<main class="wrap-header-content">
 					<div class="wrap-logo-header">
 						<img src="assets/images/logo.png" alt="AXIT" class="logo-content">
 					</div>
@@ -48,7 +48,7 @@
 						euismod bibendum laoreet. Proin gravida dolor sit amet lacus
 					accumsan et viverra justo commodo.</p>
 					<button class="download header-download">Download</button>
-				</div>
+				</main>
 				<form action="#" class="form-head">
 					<h3 class="form-title">Try Your <span class="color-text">FREE</span> Trial Today</h3>
 					<div class="form-input">
@@ -65,8 +65,8 @@
 					<button class="form-button">Get Started</button>
 				</form>
 			</div>
-		</div>
-		<div class="wrap-social-media">
+		</section>
+		<section class="wrap-social-media">
 			<div class="inner-social-media content-width clearfix">
 				<div class="social-media-content">
 					<h2 class="social-title">Social Media</h2>
@@ -98,9 +98,9 @@
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-	<div class="section-tabs">
+		</section>
+	</section>
+	<section class="section-tabs">
 		<div class="wrap-tabs content-width clearfix">
 			<div class="inner-tabs">
 				<div class="tabs tabs-content">TAB 1</div>
@@ -123,8 +123,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="wrap">
+	</section>
+	<section class="wrap">
 		<div class="wrap-content content-width">
 			<div class="wrap-awesome">
 				<h2 class="title-awesome after-title">WHY THIS IS AWESOME</h2>
@@ -154,8 +154,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="wrap-pricing">
+	</section>
+	<section class="wrap-pricing">
 		<div class="wrap-pricing-padding content-width">
 			<div class="inner-pricing">
 				<h2 class="pricing title-h2 after-title">PRICING OPTIONS</h2>
@@ -216,14 +216,13 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="section-customers">
+	</section>
+	<section class="section-customers">
 		<div class="wrap-customers content-width clearfix">
 			<div class="inner-customers">
 				<h2 class="inner-title-customers after-title">WHAT OUR CUSTOMERS ARE SAYING</h2>
 				<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 			</div>
-
 			<div class="wrap-reviews">
 				<div class="inner-reviews">
 					<div class="reviews">
@@ -275,15 +274,15 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="wrap-stylish">
+	</section>
+	<section class="wrap-stylish">
 		<div class="content-width inner-stylish">
 			<h2 class="stylish after-title">STYLISH AXURE DESIGN</h2>
 			<p class="content">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
 			<button class="download">Download</button>
 		</div>
-	</div>
-	<div class="section-contacts">
+	</section>
+	<section class="section-contacts">
 		<div class="content-width">
 			<div class="contact-us">
 				<h2 class="title-contact title-h2 after-title">CONTACT US</h2>
@@ -309,7 +308,7 @@
 				<button class="contact-button">Send Messange</button>
 			</form>
 		</div>
-	</div>
+	</section>
 	<footer class="wrap-footer">
 		<div class="wrap-footer-icons content-width">
 			<a href="#" class="inner-footer-icons">
