--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -107,7 +107,7 @@
 				<div class="tabs tabs-content">TAB 2</div>
 				<div class="tabs tabs-content">TAB 3</div>
 			</div>
-			<div class="wrap-tabs-effect">
+			<div class="wrap-tabs-effect clearfix">
 				<div class="inner-effect">
 					<h2 class="inner-title effect-title">Tabs with soft transitioning effect.</h2>
 					<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
