--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -12,7 +12,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<section class="section-header" id="Features">
+	<section class="section-header" id="features">
 		<section class="wrap-head">
 			<header class="wrap-navbar">
 				<div class="inner-navbar content-width clearfix">
@@ -20,26 +20,26 @@
 						<a href="#"><img src="assets/images/logo.png" alt="AXIT" class="logo-navbar-img"></a>
 					</div>
 					<div class="burger-wrapper">
-						<input type="checkbox" id="menu__toggle">
-						<label class="menu-button" for="menu__toggle">
+						<input type="checkbox" id="menu-toggle" class="toggle">
+						<label class="menu-button" for="menu-toggle">
 							<span></span>
 						</label>
 						<nav class="navbar-menu clearfix">
 							<ul class="list-navbar">
 								<li class="navbar-items">
-									<a href="#Features" class="link-menu">Features</a>
+									<a href="#features" class="link-menu">Features</a>
 								</li>
 								<li class="navbar-items">
-									<a href="#About" class="link-menu">About</a>
+									<a href="#about" class="link-menu">About</a>
 								</li>
 								<li class="navbar-items">
-									<a href="#Pricing" class="link-menu">Pricing</a>
+									<a href="#pricing" class="link-menu">Pricing</a>
 								</li>
 								<li class="navbar-items">
-									<a href="#Reviews" class="link-menu">Reviews</a>
+									<a href="#reviews" class="link-menu">Reviews</a>
 								</li>
 								<li class="navbar-items">
-									<a href="#Contact" class="link-menu">Contact</a>
+									<a href="#contact" class="link-menu">Contact</a>
 								</li>
 							</ul>
 						</nav>
@@ -108,7 +108,7 @@
 			</div>
 		</section>
 	</section>
-	<section class="section-tabs" id="About">
+	<section class="section-tabs" id="about">
 		<div class="wrap-tabs content-width clearfix">
 			<div class="inner-tabs">
 				<div class="tabs tabs-content">TAB 1</div>
@@ -163,7 +163,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="wrap-pricing" id="Pricing">
+	<section class="wrap-pricing" id="pricing">
 		<div class="wrap-pricing-padding content-width">
 			<div class="inner-pricing">
 				<h2 class="pricing title-h2 after-title">PRICING OPTIONS</h2>
@@ -225,7 +225,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="section-customers" id="Reviews">
+	<section class="section-customers" id="reviews">
 		<div class="wrap-customers content-width clearfix">
 			<div class="inner-customers">
 				<h2 class="inner-title-customers after-title">WHAT OUR CUSTOMERS ARE SAYING</h2>
@@ -290,7 +290,7 @@
 			<button class="download">Download</button>
 		</div>
 	</section>
-	<section class="section-contacts" id="Contact">
+	<section class="section-contacts" id="contact">
 		<div class="content-width">
 			<div class="contact-us">
 				<h2 class="title-contact title-h2 after-title">CONTACT US</h2>
@@ -306,7 +306,7 @@
 							<input type="email" name="user-mail-contacts" id="usermail-contacts" placeholder="Email">
 						</div>
 						<div class="input">
-							<input type="name" name="user-subject" id="usersubject" placeholder="Subject">
+							<input type="text" name="user-subject" id="usersubject" placeholder="Subject">
 						</div>
 					</div>
 					<div class="form-messenger">
