--- a/project/homework/index.html
+++ b/project/homework/index.html
@@ -3,12 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width-device-width, initial-scale=1">
-	<link rel="stylesheet" href="assets/css/normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:100,100i,200,200i,300,300i,400&display=swap" rel="stylesheet">
-	<link href="assets/css/all.css" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/fonts.css">
-	<link rel="stylesheet" href="assets/css/main.css">
-	<link rel="stylesheet" href="assets/css/media.css">
+	<link rel="stylesheet/less" href="assets/less/main.less">
+	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
 	<title>Document</title>
 </head>
 <body>
